fixTypo and new text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>FirstRepo</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <h1>Hello Word!</h1>
+    <p>First Repo</p>
     
 </body>
 </html>
