--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Hello!</h1>
     
+    <div id="Szymon">
+        <h3>Also a hello from Szymon!!</h3>
+        <p>Please consider following <a href="https://github.com/SJMrozek" target="_blank">my GitHub Profile</a></p>
+    </div>
 </body>
 </html>
